--- a/css/style.css
+++ b/css/style.css
@@ -147,38 +147,79 @@ main .site-title .btn{
 
 }
 
+#car_intro {
+    width: 100%;
+    height: 100vh;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: top;
+    background-image: url("../assets/img/e20_scaled_edited.jpeg");
+  }
   
-.team-clean {
+main .car_intro .site-background2{
+    padding-top: 10rem;
+    text-align: center;
+    color: var(--back);
+}
+
+
+  
+main .team-clean {
     color: #313437;
     background-color: #fff;
   }
   
-  .team-clean p {
+main .team-clean p {
     color: #7d8285;
+    font-family: var(--Livvic);
+    align-content: center;
+    text-align: center;
   }
   
-  .team-clean h2 {
+main .team-clean h2 {
     font-weight: bold;
     color: inherit;
+    font-family: var(--Livvic);
+    align-content: center;
+    text-align: center;
+    margin-top: 20px;
   }
-  
-  .team-clean .intro {
+
+  main .team-clean h3 {
+    font-weight: bold;
+    color: inherit;
+    font-family: var(--Livvic);
+    align-content: center;
+    text-align: center;
+    margin-top: 20px;
+  }
+
+
+main .team-clean h1 {
+    font-weight: bold;
+    color: inherit;
+    font-family: var(--Livvic);
+    align-content: center;
+    text-align: center;
+    margin-top: 20px;
+  }
+main .team-clean .intro {
     font-size: 16px;
     max-width: 500px;
     margin: 0 auto;
   }
   
-  .team-clean .item {
+main .team-clean .item {
     text-align: center;
   }
   
-  .team-clean .item .name {
+main .team-clean .item .name {
     font-weight: 400;
     margin-top: 20px;
     color: inherit;
   }
   
-  .team-clean .item .title {
+main .team-clean .item .title {
     text-transform: uppercase;
     font-weight: 300;
     color: inherit;
@@ -186,9 +227,34 @@ main .site-title .btn{
     font-size: 15px;
   }
   
-  .team-clean .item img {
+main .team-clean .item img {
     max-width: 160px;
   }
+  
+ 
+main .team-clean .social a {
+    color: inherit;
+    margin: 0 10px;
+    display: inline-block;
+    opacity: 0.7;
+  }
+  
+main .team-clean .social a:hover {
+    opacity: 1;
+  }
+  
+main .text-center.name {
+    margin-left: auto;
+    margin-right: auto;
+    text-align: center;
+    margin-bottom: 0px;
+  }
+
+ .videowrapper{
+     align-items: center;
+ }
+
+  
 main .site-title .btn:hover{
     background:transparent;
     border:1px solid var(--white);
